--- a/css/common.css
+++ b/css/common.css
@@ -10,7 +10,7 @@
 ==============================================================================*/
 
 /* google font */
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700');
+@import url('https://fonts.googleapis.com/css?family=Barlow:400,500,600,700');
 
 html,
 body {
@@ -18,7 +18,7 @@ body {
 }
 
 body {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Barlow', sans-serif;
     font-size: 16px;
 }
 
