--- a/style.css
+++ b/style.css
@@ -472,6 +472,11 @@ li a.youtube {
 li a.skype {
 	background:url(images/social/skype.png) no-repeat scroll center center;
 }
+
+li a.linkedin {
+	background:url(images/social/linkedIn.png) no-repeat scroll center center;
+	background-size: contain;
+}
 li a.dribbble {
 	background:url(images/social/dribbble.png) no-repeat scroll center center;
 }
