--- a/css/style.css
+++ b/css/style.css
@@ -480,7 +480,7 @@ nav ul li a:hover {
 
 .single_blog_details .blog_single_img {
     display: inline-block;
-    margin: 30px 0;
+    margin: 0;
     border-radius: 2px;
 }
 
@@ -763,7 +763,15 @@ footer a:hover {
 	margin-right: 12px;
 }
 
+b, strong {
+	font-weight: 700;
+}
+
 
 /* end of project section */
 
 
+video {
+	width: 100% !important;
+	height: auto !important;
+}
